# vxworks7-layer-for-ros2

Fast-DDS/usr_src/: 0004-fix-undefined-TIOCOUTQ.patch
autoware.universe/usr_src/: 0001-add-float.patch  0001-disable-backtrace.patch  0002-disable-backtrace.patch  0003-float-cast.patch  0004-hypot.patch
class_loader/usr_src/: 0001-vxworks-support.patch
geographiclib_vendor/: 0001-geographiclib.patch  CMakeLists.txt  README.md  package.xml
googletest/usr_src/: 0001-add-vxworks.patch
mimick_vendor/usr_src/: 0001-add-vxworks.patch
osrf_testing_tools_cpp/usr_src/: 0001-add-vxworks-support.patch
rcpputils/usr_src/: 0001-add-VXWORKS-to-CMakeLists.patch
rcutils/usr_src/: 0001-add-VXWORKS-to-CMakeLists.patch
rmw/usr_src/: 0001-add-VXWORKS-to-test-CMakeLists.patch
urdfdom/usr_src/: 0001-add-vxworks-support.patch
